react component - contact link

--- a/blog/src/data/pages/about.mdx
+++ b/blog/src/data/pages/about.mdx
@@ -1,13 +1,20 @@
 ---
-title: "About me"
+title: "About"
 slug: "about/index.html"
 publish: true
 ---
-Hey there!  
+import ContactLink from "components/contact-link"
+
+Welcome, stranger!
   
-I'm a software architect with +13 years of professional experience as a software developer.  
-I've been working for startups, in remote distributed teams for the last +7 years of my career.
-I've an academic background in CS and psychology. But most of what I learned about software engineering has come from being an avid self learner.  
+I've started this website with the intention to share some thoughts and interesting findings on subjects such as: 
+
+- web development
+- cloud architecture
+- devops techniques
+- software design
+- remote work
+- startups
 
 ### A walk down Memory Lane
 
@@ -29,6 +36,6 @@ At 18 I thought I needed to widen my point of view about life, so I made the dec
 - a very amateur musician
 - cisgender
 
-### Let's talk
+### Wanna talk about software development? Let's talk
 
-CONTACT-LINK-GOES-HERE
+<ContactLink />
