words - updates to about and business pages

--- a/blog/src/data/pages/business.mdx
+++ b/blog/src/data/pages/business.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Hire a senior software architect"
+title: "Consultancy services"
 slug: "business/index.html"
 publish: true
 ---
@@ -12,13 +12,15 @@ An organization's ability to learn from mistakes and pivot quickly enough, can b
 
 ### How
 
-As a human oriented full stack developer, inspired by devops principles, I work closely with remote teams to help organizations improve their streams of value, delivering **high quality software** through thoughtful planning, design and implementation of new features, refactor of legacy codebases, and automatization of existing workflows.  
-  
+As a human oriented full stack developer, inspired by devops principles, I work closely with remote teams to help organizations improve their streams of value, delivering **high quality software** through thoughtful planning, design and implementation of new features, refactor of legacy codebases, and automatization of existing workflows.
+
+<br/>
+
 I have been fortunate enough, to work with excellent mentors and friends, who helped me realize that whatever solution I build, it should help my co-workers to excel at what they do best. That attitude drives more value to an organization, than thriving to be a rockstar coder, who writes code that no one understands except by its own author.  
 
 ### Where
 
-I live in Montevideo, capital city of Uruguay; A beautiful country in South America that nicely fits into **UTC-3/EST+1**.  
+I live in Montevideo, the capital city of Uruguay; A beautiful country in South America that nicely fits into **UTC-3 / EST+1**.  
 I live in a **strategic timezone**, which allows me to work remotely with US teams during normal working hours.  
 I've a prooven track of more than 6 years of experience as a remote developer working for distributed global companies, and 13+ years of profesional experience.
 If you need help setting up a distributed team, I can help you with that too.  
