--- a/blog/src/data/pages/about.mdx
+++ b/blog/src/data/pages/about.mdx
@@ -5,9 +5,15 @@ publish: true
 ---
 import ContactLink from "components/contact-link"
 
-Welcome, stranger!
-  
-I've started this website with the intention to share some thoughts and interesting findings on subjects such as: 
+Hey there!
+
+<br/>
+
+Thanks for your visit!
+
+<br/>
+
+I've started this website to share thoughts on subjects such as: 
 
 - web development
 - cloud architecture
@@ -18,7 +24,7 @@ I've started this website with the intention to share some thoughts and interest
 
 ### A walk down Memory Lane
 
-I've been in love with computers since I can remember; Starting to code as a hobbie when I was 14 years old in Visual Basic 4. I wrote a few useful programs for my dad, and I used to hang out with a friend of mine to learn coding together during endless nights.  
+I've been interested in computers since I can remember; Starting to code as a hobbie when I was 14 years old in Visual Basic 4. I wrote a few useful programs for my dad, and I used to hang out with a friend of mine to learn coding together during endless nights.  
 I quickly felt in love with open source technologies and after a few weeks I was able to install my first Linux distro; Red Hat 4.2. I was 16 at that moment, and by then I dreamed about being a hacker. But to be honest I was only able to hack my high school teacher's password, besides a few other silly tricks.  
 At 18 I thought I needed to widen my point of view about life, so I made the decision to study psychology. A few years later I decided to get back into software development cause I just can't help it; love to write software.  
 
@@ -36,6 +42,10 @@ At 18 I thought I needed to widen my point of view about life, so I made the dec
 - a very amateur musician
 - cisgender
 
-### Wanna talk about software development? Let's talk
+### Wanna talk about software development?
+
+You can start a conversation by clicking below.
+
+<br/>
 
 <ContactLink />
