words - small change to business page, starting blog post draft

--- a/blog/src/data/pages/business.mdx
+++ b/blog/src/data/pages/business.mdx
@@ -31,7 +31,7 @@ I'm a software architect with +13 years of professional experience as a software
 I've been working for startups, in remote distributed teams for the last +7 years of my career.  
 I've an academic background in CS and psychology. But most of what I learned about software engineering comes from being an avid self learner.
 
-### Are you looking for a software developer ?
+### Let's talk
 
 If you are looking for a proficient **full-stack developer**, knowleadgable on **devops** techniques, and a **team player** who cares about people and technical culture, please drop me a line. I would love know about your project.  
 <br/>
