tutorial - adding remaining empty sections

--- a/blog/src/data/blog/php-docker-development-environment.mdx
+++ b/blog/src/data/blog/php-docker-development-environment.mdx
@@ -38,3 +38,19 @@ Writing your infrastructure as code as several advantages. Some of them are:
 More on those later. Now it's time to get our hands dirty.
 
 ### Configuration
+
+Docker & docker-compose setup
+
+MakeGNU
+
+### Create a custom Docker image
+
+### Declare your development environment with docker-compose
+
+### Define two different environments: development and production
+
+### Update your development environment
+
+### Upload your images
+
+### What's next
