UI - several bugfixes

--- a/blog/src/data/blog/php-docker-development-environment.mdx
+++ b/blog/src/data/blog/php-docker-development-environment.mdx
@@ -18,21 +18,23 @@ If you follow through this first chapter. You will end up with a working PHP 7.4
 
 ### Concepts
 
-Infrastructue as code it's a term coinned by the DevOps community.  
+**DevOps** it's a pretty hypped term these days, and that can produce confusions, but it simply comes down to:  
 
-DevOps is a pretty hypped term these days. Which can produce confusions, but it simply comes down to this:  
+_A software development metodology, that enable development and operations teams to produce better outcomes for their organization by empowering **collaboration** and **communication** between them_
 
-- Devops:  A software development metodology, that enable development and operations teams to produce better outcomes for their organization by empowering **collaboration** and **communication** between them
+**Infrastructue as code** it's another term you are going to see a lot here; It was coinned by the DevOps community, and it means:
 
-- Infrastructure as code: The process of managing, provisioning and docummenting every aspect of your infrastructure's life cycles
+_The process of managing, provisioning and docummenting every aspect of your infrastructure's life cycles_
 
-Writing your infrastructure as code as several advantages. Some of them are:
+Writing your infrastructure as code has several advantages. Some of them are:
 
 - Reduce times of infrastructure setup and maintenance
 - Ease bug reproduction
 - Communicate in code every relevant aspect of your infrastructure
-- Empowers an organization to evolve it's development and operations practices faster and easier
+- Empowers an organization to evolve it's development and operations workflows faster
 - Remove human errors from critical tasks
+- Removes burocreacy
+- Enable technical teams to try new ideas in production like environments without risks
 - Developers will have a better understanding of the production environment
 
 More on those later. Now it's time to get our hands dirty.
