--- a/blog/src/data/pages/business.mdx
+++ b/blog/src/data/pages/business.mdx
@@ -22,7 +22,7 @@ I have been fortunate enough, to work with excellent mentors and friends, who he
 
 I live in Montevideo, the capital city of Uruguay; A beautiful country in South America that nicely fits into **UTC-3 / EST+1**.  
 I live in a **strategic timezone**, which allows me to work remotely with US teams during normal working hours.  
-I've a prooven track of more than 6 years of experience as a remote developer working for distributed global companies, and 13+ years of profesional experience.
+I've a prooven track of +6 years of experience as a remote developer working for distributed global companies, and +13 years of profesional experience.
 If you need help setting up a distributed team, I can help you with that too.  
 
 ### Who
@@ -33,7 +33,7 @@ I've an academic background in CS and psychology. But most of what I learned abo
 
 ### Let's talk
 
-If you are looking for a proficient **full-stack developer**, knowleadgable on **devops** techniques, and a **team player** who cares about people and technical culture, please drop me a line. I would love know about your project.  
+If you are looking for a proficient **full-stack developer**, knowleadgable on **devops** techniques, and a **team player** who cares about people and technical culture, please drop me a line. I would love to know about your project.  
 <br/>
 <br/>
 <ContactLink />
