--- a/blog/src/data/blog/php-docker-development-environment.mdx
+++ b/blog/src/data/blog/php-docker-development-environment.mdx
@@ -1,7 +1,7 @@
 ---
 slug: "build-a-php-dev-environment-your-team-will-love/index.html"
 title: "Build a PHP development environment your team will love"
-intro: "Learn to create development infrastructure-as-code for your dev team"
+intro: "Learn to create a full fledged, containerized, development environment for your PHP projects. Learn to update it, destroy it, recreate it, or share it with others; With confidence and in a breeze!"
 tools: "php xdebug docker docker-compose gnu-make"
 date: "02-10-2020"
 publish: true
@@ -11,64 +11,56 @@ category: tutorial
 import { CodeWave } from "gatsby-theme-waves"
 import Code from "components/code"
 
-Welcome to the first post of my blog! Yikes!  
+Welcome to my first post on my first blog ( yikes! cold sweat! )  
+
+<br />
+
+Hopefully it will help you achieve a meaningful task that will save your team countless hours of tedious tasks. Like setting up the right language interpreter, the right libraries, configuration files, vendor versions, or debugging issues caused by inconcistencies between environments.  
 
 <br/>
 
-Hopefully it will help you achieve a meaningful task that will save countless hours to you and the people you work with.  
+If you follow through this tutorial, you will end up with a working, Linux based, PHP 7.4, portable development environment, with a working XDebug PHP debugger, that can be deployed with a single command, on virtually any computer that fulfills the needed requirements.  
+
+<br />
+
+The environment will allow you to:
+
+- Reduce time dedicated to setting up future development environments
+- Ease bug reproduction between environments
+- Communicate in code every relevant aspect of your environment to others
+- Reorganize your project folders structure, dependencies, infrastructure, or try other ideas; Sharing those changes faster than ever
+- Help your dev team be more aware of the context on which their project is running
+- Communicate with clear, concise code, the details of your project runtime to an IT team
+- Create the first building stone of any modern automated infrastructure
+
+### Hold on... Isn't it pure hype, or rocket science for big companies like Google or Facebook?
+
+Not exactly. In fact it's great for small startups that know what they are doing with it. And the use case we are going to explore on this guide doesn't require a big learning curve. Stick with me and you will see ;)
+
+### Ok, what's Docker then?
+
+Docker is a software that allows you to pack your applications around their own environment; With the OS and files you want them to be executed. And it also can wire them up together to define architectures of interconnected packages, and orchestrate them all together. 
 
 <br/>
 
-If you follow through this post. You will end up with a portable PHP 7.4 development environment, with a working PHP remote debugger, that can be installed with a single command on any development box.  
-
-### Intro
-
-A few terms you will see a lot here are **DevOps** and **infrastructure-as-code**. Despite the hype around them, both terms can be easily explained as follows.
-
-**Devops** its _a software development metodology, that enable development and operations teams to produce better outcomes for their organization by empowering **collaboration** and **communication** between them_
-
-**Infrastructue as code** its _the process of managing, provisioning and docummenting every aspect of your infrastructures life cycles_
-
-Potentially, the environment you will learn to create here, can allow you to:
-
-- Reduce time dedicated to setting up development infrastructure
-- Ease bug reproduction
-- Communicate in code every relevant aspect of your infrastructure to other engineers
-- Reorganize your project folders structure, dependencies, infrastructure, or try other ideas, and share those changes faster than ever.
-- Discuss infrastructure changes in the context of code reviews
-- Help developers be more aware of the context on which their project is running
-
-### Before we start
-
-You will need Docker, docker-compose, and GNU Make.  
+It's a great tool that makes it possible for developers and sysadmins to run Linux or Windows applications, on virtually any environment; A cloud infrastructure provider like Amazon, a dedicated server, a virtual machine, a personal computer, a Rasberry PI, Linux, Unix, Windows, MacOS, IoT, a single instance or even a cluster...  
 
 <br/>
 
-The easiest way to setup Docker and docker-compose in Windows and MacOS is by getting [docker Desktop](https://www.docker.com/products/docker-desktop)  
+Any computer capable of running a Docker engine can run your application in a reproducible way, regardless of the operating system where Docker is running from. And every time you throw a package in the wild you can expect to behave exactly as in the environment where you have created it.  
 
 <br/>
 
-In Windows, GNU Make might be already available in PowerShell. Else look around for a way of running `make` on your command line of choice. Chocolatey package manager might be of help there.  
+Isn't it great? Long gone are the days where everyone in your team had to create their own development environments, sometimes with different php versions or libraries. Waisting hours in the best cases, trying to make them as similar as possible to the staging version. Only to find out, months later, after a failed deployment, that the production environment was changed overnight, leaving undocummented inconsistencies between them.
 
 <br/>
 
-In Linux you should be able to install Docker with your package manager of choice, and GNU Make its usually present on most popular distros.  
+But how Docker does that? Well, each containerized app is loaded on top of a minimum Linux or Windows abstraction layer; with their own file system, eventually plugged into one or more virtual networks; limited by a certain amount of CPU and memory available for them.
 
 <br/>
 
-Finally, create a folder for this tutorial and add it to Dockers shared folders. You can do that in MacOSs Docker Desktop at:  
-
-<br/>
-
-**Preferences -> Resources -> File Sharing**  
-
-<br/>
-
-Sharing your folder with Docker its a prerequisite to copy whatever file you will need to put inside your containers.  
-
-### Docker basics
-
-Docker allows you to package your apps with their own runtime, with isolated resources, on top of a minimum operating system kernel. With their own file system, and eventually one or more virtual networks.  
+You might be asking now, what is the difference with virtual machines (VMs)?  
+The main difference is that Docker does not handle hardware virtualization, making their isolated packages much lighter, with much reduced resources footprint. Making it so easy to create a new instance of the exact same environment, that it has become easier sometimes to create new ones and destroy the old ones once the process gets accomplished; greatly simplifying infrastructure management. Even allowing sysadmins to sleep by night knowing that their infrastructure can self heal if something bad happens.  
 
 <br/>
 
@@ -89,12 +81,34 @@ For this tutorial we are going to use an [official PHP image](https://hub.docker
 
 For production environments it is better to define one image per process. That way you can administer hardware resources with more granularity, besides having an easier time debugging issues related with your containers.  
 
+### Requirements
+
+Before creating our first container, we will need **Docker engine**, **docker-compose**, and **GNU Make**.  
+
 <br/>
 
-Enough theory, lets get our hands dirty!
+The easiest way to setup Docker and docker-compose in Windows and MacOS is by getting [Docker Desktop](https://www.docker.com/products/docker-desktop).  
+If you are using Linux you can use your package manager of choice, or compile both from source.
 
-#### A containerized Hello World  
+<br/>
 
+GNU Make might be already available in Windows through PowerShell, and its usually present on most popular Linux distros as well as MacOS.
+
+<br/>
+
+Finally, create a folder for this tutorial and add share it with Docker. In MacOSs Docker Desktop it goes like this:  
+
+<br/>
+
+**Preferences -> Resources -> File Sharing**  
+
+<br/>
+
+Sharing your folder with Docker its a prerequisite to copy whatever file you will need to run inside your docker containers.  
+
+#### Hello World! / Hello Container!
+
+Enough theory, lets get our hands dirty!  
 Create the following index.php file inside your project folder
 
 <Code language="php" snippet={`<?php phpinfo(); `} />  
